--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>groupId</groupId>
     <artifactId>pressreleases2rss</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -15,7 +15,6 @@
     </properties>
 
     <dependencies>
-        <!-- AWS lambda -->
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-lambda-java-core</artifactId>
@@ -61,6 +60,8 @@
         </dependency>
     </dependencies>
 
+
+<!-- todo: exclude LocalStarter from packaging -->
     <build>
         <plugins>
             <plugin>
@@ -80,5 +81,4 @@
             </plugin>
         </plugins>
     </build>
-    
 </project>
